--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -278,8 +278,7 @@ function selection_bounds(map_bounds, highlight_layer) {
             if(response.priv.responseText){
                 var json_parser = new OpenLayers.Format.JSON();
                 var feature_out = json_parser.read(response.priv.responseText);
-                var tiles = hasData(jurisdictionFilter(this.geom_filters, feature_out));
-                console.log(feature_out);
+                var tiles = hasData(jurisdictionFilter(this.geom_filters, feature_out.features));
                 for ( var i=0; i<tiles.length; i++ ){
                     var f = tiles[i];
                     var corners = {
