--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -186,12 +186,10 @@ function wfs_proto_creator(layer_request, srs, outformat){
 
 function jurisdictionFilter(jurisdiction_filters, feature_list){
     console.log("feature_list.length="+feature_list.length);
+    console.log(jurisdiction_filters);
     var tile_list = [];
     for (j in jurisdiction_filters){
-        console.log(j);
         for (f in feature_list){
-            console.log("features");
-            console.log(f);
             if(jurisdiction_filters.evaluate(f)){
                 tile_list.push(f);
             }
