--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -184,14 +184,13 @@ function wfs_proto_creator(layer_request, srs, outformat){
     });
 }
 
-function jurisdictionFilter(jurisdiction_filters, feature_list){
+function jurisdictionFilter(jurisdiction_geoms, feature_list){
     console.log("feature_list.length="+feature_list.length);
     console.log(jurisdiction_filters);
     var tile_list = [];
-    for ( j in jurisdiction_filters){
-        console.log(j);
+    for ( jg in jurisdiction_geoms){
         for (var f in feature_list){
-            if(jurisdiction_filters[j].evaluate(f)){
+            if(jg.intersects(f.geometry)){
                 tile_list.push(f);
             }
         }
@@ -259,12 +258,12 @@ function selection_bounds(map_bounds, highlight_layer) {
     var wfs_proto = wfs_proto_creator("{{feature_tiled}}", "EPSG:32651","json");         
     var wfs_resp = wfs_proto.read({
         filter: box_filter,
-        geom_filters: geom_filters,
+       jurisdiction_geoms: jurisdiction_geoms,
         callback: function(response){
             if(response.priv.responseText){
                 var json_parser = new OpenLayers.Format.GeoJSON();
                 var feature_out = json_parser.read(response.priv.responseText);
-                var tiles = hasData(jurisdictionFilter(geom_filters, feature_out));
+                var tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
                 for ( var i=0; i<tiles.length; i++ ){
                     var f = tiles[i];
                     var corners = {
