--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -259,7 +259,7 @@ function selection_bounds(map_bounds, highlight_layer) {
     var wfs_proto = wfs_proto_creator("{{feature_tiled}}", "EPSG:32651","json");         
     var wfs_resp = wfs_proto.read({
         filter: box_filter,
-       jurisdiction_geoms: jurisdiction_geoms,
+       //jurisdiction_geoms: jurisdiction_geoms,
         callback: function(response){
             if(response.priv.responseText){
                 var json_parser = new OpenLayers.Format.GeoJSON();
