--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -184,7 +184,7 @@ function wfs_proto_creator(layer_request, srs, outformat){
     });
 }
 
-function jurisdictionFilterggeoms, feature_list){
+function jurisdictionFilter(geoms, feature_list){
     console.log("feature_list.length="+feature_list.length);
     var tile_list = [];
     
