--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -263,6 +263,7 @@ function selection_bounds(map_bounds, highlight_layer) {
             if(response.priv.responseText){
                 var json_parser = new OpenLayers.Format.GeoJSON();
                 var feature_out = json_parser.read(response.priv.responseText);
+                console.log(jurisdiction_geoms);
                 var tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
                 for ( var i=0; i<tiles.length; i++ ){
                     var f = tiles[i];
