--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -190,10 +190,9 @@ function jurisdictionFilter(geoms, feature_list){
     var tile_list = [];
    
     for (f in feature_list){
-            console.log(f);
          for ( g in geoms){
-            if(f.geometry.components[0].intersects(g.geometry)){
-                tile_list.push(f);
+            if(feature_list[f].geometry.components[0].intersects(g.geometry)){
+                tile_list.push(feature_list[f]);
             }
         }
     }
