--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -223,7 +223,7 @@ function hasData( f_list){
     });
     var tile_list = [];
     for (var i=0;i<f_list.length;i++){
-        if(data_filter.evaluate(f_list[i[)){
+        if(data_filter.evaluate(f_list[i])){
             tile_list.push(f_list[i]);
         }
     }
