--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -186,9 +186,7 @@ function wfs_proto_creator(layer_request, srs, outformat){
 
 function jurisdictionFilter(geoms, feature_list){
     console.log("feature_list.length="+feature_list.length);
-    console.log(feature_list);
     var tile_list = [];
-   
     for (var i=0;i<feature_list.length;i++){
          for ( var j=0; j<geoms.length;j++){
             if(feature_list[i].geometry.components[0].intersects(geoms[j].geometry)){
@@ -263,11 +261,9 @@ function selection_bounds(map_bounds, highlight_layer) {
             if(response.priv.responseText){
                 var json_parser = new OpenLayers.Format.GeoJSON();
                 var feature_out = json_parser.read(response.priv.responseText);
-                console.log(jurisdiction_geoms);
                 var tiles = hasData(jurisdictionFilter(jurisdiction_geoms, feature_out));
                 for ( var i=0; i<tiles.length; i++ ){
                     var f = tiles[i];
-                    console.log(f);
                     var corners = {
                         "ur_x": f.data.MAXX, "ur_y": f.data.MAXY,
                         "ul_x": f.data.MINX, "ul_y": f.data.MAXY,
@@ -470,19 +466,31 @@ Ext.onReady(function (){
             var transformed_pt = click_pt.transform(map.getProjectionObject(),new OpenLayers.Projection("EPSG:32651"));
             var computed_corners = get_corners(click_pt.x, click_pt.y);
             
-            var temp_pt = new OpenLayers.Geometry.Point(computed_corners["ul_x"], computed_corners["ul_y"]);
+            var tmp_tile = new OpenLayers.Geometry.Polygon(
+                new OpenLayers.Geometry.LinearRing(
+                    new OpenLayers.Geometry.Point(computed_corners["ul_x"], computed_corners["ul_y"] ),
+                    new OpenLayers.Geometry.Point(computed_corners["ur_x"], computed_corners["ur_y"]),
+                    new OpenLayers.Geometry.Point(computed_corners["lr_x"], computed_corners["lr_y"] ),
+                    new OpenLayers.Geometry.Point(computed_corners["ll_x"], computed_corners["ll_y"] ),
+                )
+            );
             
-            var tile = createTile(computed_corners);
+            console.log(tmp_tile);
+            
+            var tiles = hasData(jurisdictionFilter(jurisdiction_geoms, [tmp_tile]));
+            if(tiles.length == 1){
+                var tile = createTile(computed_corners);
 
-            if (find_georef(tile_list, tile.georef)<0){
-                tile_list.push(tile);
-                tile.feature = createHighlightBox(tile.corners);
-                highlight_layer.addFeatures([tile.feature]);
-            }else{
-                removeHighlight(tile.georef, highlight_layer);
+                if (find_georef(tile_list, tile.georef)<0){
+                    tile_list.push(tile);
+                    tile.feature = createHighlightBox(tile.corners);
+                    highlight_layer.addFeatures([tile.feature]);
+                }else{
+                    removeHighlight(tile.georef, highlight_layer);
+                }
+                
+                 display_points("point_display", highlight_layer);
             }
-            
-             display_points("point_display", highlight_layer);
         }
     });
 
