--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -471,7 +471,7 @@ Ext.onReady(function (){
                     new OpenLayers.Geometry.Point(computed_corners["ul_x"], computed_corners["ul_y"] ),
                     new OpenLayers.Geometry.Point(computed_corners["ur_x"], computed_corners["ur_y"]),
                     new OpenLayers.Geometry.Point(computed_corners["lr_x"], computed_corners["lr_y"] ),
-                    new OpenLayers.Geometry.Point(computed_corners["ll_x"], computed_corners["ll_y"] ),
+                    new OpenLayers.Geometry.Point(computed_corners["ll_x"], computed_corners["ll_y"] )
                 )
             );
             
