--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -189,7 +189,8 @@ function jurisdictionFilter(geoms, feature_list){
     var tile_list = [];
     for (var i=0;i<feature_list.length;i++){
          for ( var j=0; j<geoms.length;j++){
-            if(feature_list[i].geometry.components[0].intersects(geoms[j].geometry)){
+            if(feature_list[i].geometry.components[0].intersects(geoms[j].geometry)
+                console.log(feature_list[i]);
                 tile_list.push(feature_list[i]);
             }
         }
