--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -467,31 +467,71 @@ Ext.onReady(function (){
             var transformed_pt = click_pt.transform(map.getProjectionObject(),new OpenLayers.Projection("EPSG:32651"));
             var computed_corners = get_corners(click_pt.x, click_pt.y);
             
-            var tmp_tile = new OpenLayers.Feature.Vector({ geometry: new OpenLayers.Geometry.MultiPolygon(
-               [new OpenLayers.Geometry.Polygon(new OpenLayers.Geometry.LinearRing(
-                    new OpenLayers.Geometry.Point(computed_corners["ul_x"], computed_corners["ul_y"] ),
-                    new OpenLayers.Geometry.Point(computed_corners["ur_x"], computed_corners["ur_y"]),
-                    new OpenLayers.Geometry.Point(computed_corners["lr_x"], computed_corners["lr_y"] ),
-                    new OpenLayers.Geometry.Point(computed_corners["ll_x"], computed_corners["ll_y"] )
-                ))]
-            )});
+            var tile = createTile(computed_corners);
             
-            console.log(tmp_tile);
+            var data_filter = new OpenLayers.Filter.Logical({
+                type: "||",
+                filters: [
+                    new OpenLayers.Filter.Comparison({
+                        type: "==",
+                        property: "DSM",
+                        value: "1"
+                    }),
+                    new OpenLayers.Filter.Comparison({
+                        type: "==",
+                        property: "DTM",
+                        value: "1"
+                    }),
+                    new OpenLayers.Filter.Comparison({
+                        type: "==",
+                        property: "ORTHO",
+                        value: "1"
+                    }),
+                ]
+            });
             
-            var tiles = hasData(jurisdictionFilter(jurisdiction_geoms, [tmp_tile]));
-            if(tiles.length == 1){
-                var tile = createTile(computed_corners);
+            var filter = new OpenLayers.Filters.Logical({
+                type: '&&',
+                filters: [
+                    new OpenLayers. Filters.Comparison({
+                        type: "==",
+                        property: "GEOREF",
+                        matchCase: true,
+                        value: tile.georef
+                    }),
+                    data_filter
+                ]
+            });
+            
+            var wfs_proto = wfs_proto_creator("{{feature_tiled}}", "EPSG:32651","json");         
+            var wfs_resp = wfs_proto.read({
+                filter: filter,
+                callback: function(response){
+                     if(response.priv.responseText){
+                        var json_parser = new OpenLayers.Format.GeoJSON();
+                        var feature_out = json_parser.read(response.priv.responseText);
+                        var corners = {
+                            "ur_x": f.data.MAXX, "ur_y": f.data.MAXY,
+                            "ul_x": f.data.MINX, "ul_y": f.data.MAXY,
+                            "ll_x": f.data.MINX, "ll_y": f.data.MINY,
+                            "lr_x": f.data.MAXX,"lr_y": f.data.MINY
+                        }
 
-                if (find_georef(tile_list, tile.georef)<0){
-                    tile_list.push(tile);
-                    tile.feature = createHighlightBox(tile.corners);
-                    highlight_layer.addFeatures([tile.feature]);
-                }else{
-                    removeHighlight(tile.georef, highlight_layer);
+                        var tile = createTile(corners);
+                    
+                        if (find_georef(tile_list, tile.georef)<0){
+                            tile_list.push(tile);
+                            tile.feature = createHighlightBox(tile.corners);
+                            highlight_layer.addFeatures([tile.feature]);
+                        }else{
+                            removeHighlight(tile.georef, highlight_layer);
+                        }
+                        display_points("point_display", highlight_layer);
+                    }
                 }
-                
-                 display_points("point_display", highlight_layer);
-            }
+            });
+
+           
         }
     });
 
