--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -468,7 +468,7 @@ Ext.onReady(function (){
             
             var tile = createTile(computed_corners);
 
-            var filter = new OpenLayers. Filters.Comparison({
+            var filter = new OpenLayers. Filter.Comparison({
                     type: "==",
                     property: "GEOREF",
                     matchCase: true,
