--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -470,7 +470,7 @@ Ext.onReady(function (){
 
             var filter = new OpenLayers. Filter.Comparison({
                     type: "==",
-                    property: "GEOREF",
+                    property: "GRIDREF",
                     matchCase: true,
                     value: tile.georef
             });
