--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -233,11 +233,13 @@ function hasData( f_list){
 function filterSelectedTiles(tile_filter, single_click, send_notice){
      var wfs_proto = wfs_proto_creator("{{feature_tiled}}", "EPSG:32651","json"); 
      OpenLayers.Util.extend(wfs_proto, {
-          singe_click: single_click,
+          single_click: single_click,
           send_notice: send_notice
      });
      var arg_obj = {
          filter: tile_filter,
+         single_click: single_click,
+          send_notice: send_notice,
          callback: function(response){
              console.log(this.single_click);
              console.log(this.send_notice);
